--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,22 +1,16 @@
 # Makefile example (icc)
 
 SHELL := /bin/bash
-CXXFLAGS?= -std=c++11 -O3 -DNDEBUG -DAMBIENT_DISABLE_MPI
+CXXFLAGS?= -std=c++11 -O3 -DNDEBUG -DAMBIENT_GLOBALS -DAMBIENT_DISABLE_MPI -I../src -mkl
 
 .DEFAULT: all
 .PHONY: all clean
 
 EXAMPLES = diffusion partitioned_vector vector atomic matrix mp_gemm_simple mp_gemm_log groups
+all: $(EXAMPLES)
 
-all: libambient.a $(EXAMPLES)
-
-%: %.cpp libambient.a
-	$(CXX) -o $(basename $<) $< $(CXXFLAGS) -I../src -L. -lambient -mkl
-
-libambient.a: ../src/ambient/ambient.cpp
-	$(CXX) -c ../src/ambient/ambient.cpp $(CXXFLAGS) -I../src -o ambient.cpp.o
-	ar cr libambient.a ambient.cpp.o; ranlib libambient.a;
-	rm -f ambient.cpp.o
+%: %.cpp
+	$(CXX) -o $(basename $<) $< $(CXXFLAGS)
 
 clean:
-	-rm -f libambient.a $(EXAMPLES)
+	-rm -f $(EXAMPLES)
