Left-over export

--- a/src/ambient/CMakeLists.txt
+++ b/src/ambient/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_library (ambient ambient.cpp)
 
 install(TARGETS ambient COMPONENT libraries
-                        DESTINATION lib
-                        EXPORT AmbientTargets)
+                        DESTINATION lib)
