Cleaning up CMake

--- a/src/ambient/CMakeLists.txt
+++ b/src/ambient/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${AMBIENT_CXX_FLAGS} ${AMBIENT_THREADING_FLAGS}")
+
 add_library (ambient ambient.cpp)
 
 install(TARGETS ambient COMPONENT libraries
