MPI actiavted if mpi.h is present

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 # Makefile example (icc)
 
 #FLAGS?= -std=c++11 -O3
-FLAGS?= -std=c++11 -O3 -DBIND_MPI=MPI_THREAD_FUNNELED -mt_mpi
+FLAGS?= -std=c++11 -O3 -mt_mpi
 EXAMPLES = array ptr reduce diffusion filter
 
 .DEFAULT: all
