moving makefiles around

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,19 +1,22 @@
-# Makefile for multithreaded examples.
-# Note: Cilk is used as a threading backend (MPI and CUDA are not enabled).
+# Makefile
+# Note: MPI can be easily disabled (i.e. removing BIND_REQUIRE_MPI knob and setting CXX to g++/icpc).
 
-CXX = g++
-FLAGS = -O3 -std=c++11 -fcilkplus
-EXAMPLES = array diffusion reduce shared_ptr
+CXX = mpicxx
+FLAGS = -O3 -std=c++11 -fcilkplus -DBIND_REQUIRE_MPI
+EXAMPLES = diffusion.node mapreduce.node max_rank.node reduce.node shared_ptr.node
 
 .DEFAULT: all
 .PHONY: all clean
 all: $(EXAMPLES)
 
-%: %.cpp
-	$(CXX) -o $(basename $<) $< $(FLAGS)
+%.node: %.cpp
+	$(CXX) -o $@ $< $(FLAGS)
 
 run:
-	for example in $(EXAMPLES); do ./$$example || exit 1; done
+	# Note: MV2_ENABLE_AFFINITY=0 enables threading in MVAPICH2 
+	for example in $(EXAMPLES); do \
+		MV2_ENABLE_AFFINITY=0 mpiexec -np 2 ./$$example || exit 1; \
+	done
 
 clean:
 	-rm -f $(EXAMPLES)
