updating simple array example

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 
 CXX = mpicxx
 FLAGS = -O3 -std=c++11 -fcilkplus -DBIND_REQUIRE_MPI
-EXAMPLES = diffusion.node mapreduce.node max_rank.node reduce.node shared_ptr.node
+EXAMPLES = array.node diffusion.node mapreduce.node max_rank.node reduce.node shared_ptr.node
 
 .DEFAULT: all
 .PHONY: all clean
