--- a/examples/Makefile.cuda
+++ b/examples/Makefile.cuda
@@ -1,7 +1,7 @@
 # Makefile for gpu/node examples
 
-CXX = mpiicpc
-FLAGS = -O3 -std=c++11 -mt_mpi
+CXX = mpicxx
+FLAGS = -O3 -std=c++11 -fcilkplus -DBIND_REQUIRE_MPI -DBIND_REQUIRE_CUDA
 SM = sm_37
 EXAMPLES = array_gpu
 
@@ -13,6 +13,12 @@ all: $(EXAMPLES)
 	nvcc -DCUDA_C -x cu -arch=${SM} -I. -dc $@.cpp -o $@_cu.o
 	nvcc -ccbin ${CXX} -Xcompiler "${FLAGS}" -arch=${SM} $@.cpp $@_cu.o -o $@
 	rm $@_cu.o
+
+run:
+	# Note: MV2_ENABLE_AFFINITY=0 enables threading in MVAPICH2 
+	for example in $(EXAMPLES); do \
+		MV2_ENABLE_AFFINITY=0 mpiexec -np 2 ./$$example || exit 1; \
+	done
 
 clean:
 	-rm -f $(EXAMPLES)
